--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-10 18:32:11+0000 */
+/* Translation-Revision-Date: 2021-06-23 09:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -34,10 +34,10 @@
 "%1$@ to fix threats." = "%1$@ per risolvere le minacce.";
 
 /* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
-"%1$d Like" = "%1$d Like";
+"%1$d Like" = "%1$d Mi piace";
 
 /* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
-"%1$d Likes" = "%1$d Likes";
+"%1$d Likes" = "%1$d Mi piace";
 
 /* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
 "%1$d blogger likes this." = "Piace a %1$d blogger.";
@@ -758,13 +758,13 @@
 "Are you sure you want to mark this comment as Spam?" = "Sei sicuro di voler contrassegnare questo commento come spam?";
 
 /* Message asking for confirmation before marking a comment as trash */
-"Are you sure you want to mark this comment as Trash?" = "Are you sure you want to mark this comment as Trash?";
+"Are you sure you want to mark this comment as Trash?" = "Desideri contrassegnare questo commento come Cestino?";
 
 /* Message prompting the user to confirm that they want to permanently delete a group of media items. */
 "Are you sure you want to permanently delete these items?" = "Sei sicuro di volere eliminare per sempre questi elementi?";
 
 /* Message asking for confirmation on comment deletion */
-"Are you sure you want to permanently delete this comment?" = "Are you sure you want to permanently delete this comment?";
+"Are you sure you want to permanently delete this comment?" = "Desideri eliminare questo commento in modo permanente?";
 
 /* Message prompting the user to confirm that they want to permanently delete a media item. Should match Calypso. */
 "Are you sure you want to permanently delete this item?" = "Desideri eliminare in modo permanente questo elemento?";
@@ -906,7 +906,7 @@
 "Back" = "Indietro";
 
 /* No comment provided by engineer. */
-"Background Color" = "Background Color";
+"Background Color" = "Colore di sfondo";
 
 /* Title of the cell displaying status of a backup in progress */
 "Backing up site" = "Backup del sito in corso";
@@ -1289,7 +1289,7 @@
 "Choose Homepage" = "Scegli homepage";
 
 /* Button allowing the user to choose an image from their device to use as their site icon */
-"Choose Image From My Device" = "Choose Image From My Device";
+"Choose Image From My Device" = "Scegli un'immagine dal mio dispositivo";
 
 /* Title for settings section which allows user to select their home page and posts page */
 "Choose Pages" = "Scegli le pagine";
@@ -1819,7 +1819,7 @@
 "Create Story Post" = "Crea articolo della storia";
 
 /* Button allowing the user to create a site icon by choosing an emoji character */
-"Create With Emoji" = "Create With Emoji";
+"Create With Emoji" = "Crea con emoji";
 
 /* Create WordPress.com site button */
 "Create WordPress.com site" = "Crea un sito WordPress.com";
@@ -1843,7 +1843,7 @@
 "Create a post, page, or story" = "Crea un articolo, una pagina o una storia";
 
 /* No comment provided by engineer. */
-"Create a site icon" = "Create a site icon";
+"Create a site icon" = "Crea un'icona del sito";
 
 /* Label that describes the download backup action */
 "Create downloadable backup" = "Crea backup scaricabile";
@@ -2538,7 +2538,7 @@
 "Error activating %@." = "Errore durante l'attivazione di %@.";
 
 /* Message shown when approving a Comment fails. */
-"Error approving comment" = "Error approving comment";
+"Error approving comment" = "Errore durante l'approvazione del commento";
 
 /* No comment (test)
    This secondary message is displayed if a user encounters a general error. */
@@ -2548,7 +2548,7 @@
 "Error deactivating %@." = "Errore durante la disattivazione di %@.";
 
 /* Message shown when deleting a Comment fails. */
-"Error deleting comment" = "Error deleting comment";
+"Error deleting comment" = "Errore durante l'eliminazione del commento";
 
 /* There was an error disabling autoupdates for a plugin, placeholder is the plugin name */
 "Error disabling autoupdates for %@." = "Errore durante la disabilitazione degli aggiornamenti automatici per %@.";
@@ -2572,7 +2572,7 @@
 "Error loading plugins" = "Errore durante il caricamento dei plugin.";
 
 /* Message shown when marking a Comment as spam fails. */
-"Error marking comment as spam" = "Error marking comment as spam";
+"Error marking comment as spam" = "Errore durante il contrassegno di un commento come spam";
 
 /* Text displayed in HUD while a post revision is being loaded. */
 "Error occurred\nduring loading" = "Si è verificato un errore\ndurante il caricamento";
@@ -2608,7 +2608,7 @@
 "Error sending verification email. Check your connection and try again." = "Errore durante l'invio dell'email di verifica. Controlla la connessione e riprova.";
 
 /* Message shown when unapproving a Comment fails. */
-"Error unapproving comment" = "Error unapproving comment";
+"Error unapproving comment" = "Errore durante la rimozione dell'approvazione del commento";
 
 /* There was an error updating a plugin, placeholder is the plugin name */
 "Error updating %@." = "Errore durante l'aggiornamento di %@.";
@@ -3465,7 +3465,7 @@
 "Jetpack could not be installed at this time." = "Jetpack non può essere installato in questo momento.";
 
 /* Subject of new Zendesk ticket. */
-"Jetpack for iOS Support" = "Jetpack for iOS Support";
+"Jetpack for iOS Support" = "Supporto Jetpack per iOS";
 
 /* The Jetpack view title for the success state */
 "Jetpack installed" = "Jetpack installato";
@@ -4730,7 +4730,7 @@
 "People" = "Persone";
 
 /* Informative tip shown to user in the Blogging Reminders Settings screen. */
-"People who post at least twice weekly get 87% more views on their site." = "People who post at least twice weekly get 87% more views on their site.";
+"People who post at least twice weekly get 87% more views on their site." = "Le persone che pubblicano almeno due volte alla settimana ottengono l'87% di visualizzazioni in più sul proprio sito.";
 
 /* Label for date periods. */
 "Period" = "Periodo";
@@ -5351,7 +5351,7 @@
 "Remove Site Icon" = "Rimuovi l'icona del sito";
 
 /* No comment provided by engineer. */
-"Remove as Featured Image " = "Remove as Featured Image ";
+"Remove as Featured Image " = "Rimuovi come immagine in evidenza  ";
 
 /* Option to remove Insight from view. */
 "Remove from insights" = "Rimuovi dalla panoramica";
@@ -5895,7 +5895,7 @@
 "Set Parent" = "Imposta genitore";
 
 /* No comment provided by engineer. */
-"Set as Featured Image " = "Set as Featured Image ";
+"Set as Featured Image " = "Imposta come immagine in evidenza ";
 
 /* Label for a button that sets the selected page as the site's Homepage */
 "Set as Homepage" = "Imposta come homepage";
@@ -5904,7 +5904,7 @@
 "Set as Posts Page" = "Imposta come pagina degli articoli";
 
 /* Title of the set goals button in the Blogging Reminders Settings flow. */
-"Set goals" = "Set goals";
+"Set goals" = "Imposta gli obiettivi";
 
 /* The Jetpack view button title for the success state */
 "Set up" = "Configura";
@@ -6630,7 +6630,7 @@
 "The certificate for this server is invalid. You might be connecting to a server that is pretending to be “%@” which could put your confidential information at risk.\n\nWould you like to trust the certificate anyway?" = "Il certificato per questo server non è valido. Continuando, corri il rischio di connetterti ad un server che finge di essere  “%@”, il che potrebbe compromettere la sicurezza di informazioni riservate che ti appartengono.\n\nVuoi accettare comunque il certificato?";
 
 /* Message informing the user that posts page cannot be edited */
-"The content of your latest posts page is automatically generated and cannot be edited." = "The content of your latest posts page is automatically generated and cannot be edited.";
+"The content of your latest posts page is automatically generated and cannot be edited." = "Il contenuto della pagina degli articoli recenti viene generato automaticamente e non può essere modificato.";
 
 /* Title for a threat that includes the file name of the file */
 "The file %1$@ contains a malicious code pattern" = "Il file %1$@ contiene un modello di codice dannoso";
@@ -6947,7 +6947,7 @@
 "Time to finish setting up your site! Our checklist walks you through the next steps." = "È il momento di finire l'impostazione del tuo sito! La nostra checklist ti guida attraverso i prossimi passaggi.";
 
 /* Title of a panel shown in the Blogging Reminders Settings screen, providing the user with a helpful tip. */
-"Tip" = "Tip";
+"Tip" = "Suggerimento";
 
 /* WordPress.com Marketing Footer Text */
 "Tips for getting the most out of WordPress.com." = "Suggerimenti per utilizzare al meglio WordPress.com.";
@@ -7421,7 +7421,7 @@
 "Update Profile Photo" = "Aggiorna la foto del profilo";
 
 /* Title for sheet displayed allowing user to update their site icon */
-"Update Site Icon" = "Update Site Icon";
+"Update Site Icon" = "Aggiorna icona del sito";
 
 /* Accessibility hint for the Comments button in Stats Overview. */
 "Updates the bar chart to show comments." = "Aggiorna il grafico a barre che mostra i commenti.";
@@ -8232,7 +8232,7 @@
 "You can update this any time via My Site > Site Settings" = "Puoi aggiornare in qualsiasi momento tramite Il mio sito > Impostazioni del sito";
 
 /* Prompt shown on the Blogging Reminders Settings screen. */
-"You can update this anytime" = "You can update this anytime";
+"You can update this anytime" = "Puoi aggiornare questo elemento in qualsiasi momento";
 
 /* No comment provided by engineer. */
 "You cannot use that email address to signup. We are having problems with them blocking some of our email. Please use another email provider." = "L'indirizzo email che hai inserito non può essere usato per creare l'account. Stiamo avendo problemi con il tuo provider di posta elettronica che blocca le nostre email di attivazione. Si prega di riprovare con un altro indirizzo email.";
@@ -8324,7 +8324,7 @@
 "You will not be able to change your username back." = "la modifica del nome utente non è reversibile.";
 
 /* Description shown on the completion screen of the Blogging Reminders Settings screen. */
-"You'll get reminders to blog X times a week on DAY and DAY." = "You'll get reminders to blog X times a week on DAY and DAY.";
+"You'll get reminders to blog X times a week on DAY and DAY." = "Riceverai promemoria relativi al tuo blog X volte a settimana il GIORNO e il GIORNO.";
 
 /* Displayed in the Notifications Tab as a title, when the Unread Filter shows no unread notifications as a title */
 "You're all up to date!" = "È tutto aggiornato!";
@@ -8378,7 +8378,7 @@
 "Your post is currently being uploaded. Please wait until this completes." = "L'articolo è attualmente in fase di caricamento. Attendi il termine dell'operazione.";
 
 /* Description on the first screen of the Blogging Reminders Settings flow. */
-"Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress." = "Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress.";
+"Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress." = "Il tuo articolo è in fase di pubblicazione... nel frattempo, imposta i tuoi obiettivi di blogging per ricevere i promemoria e monitorare i tuoi progressi.";
 
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "I tuoi articoli, pagine e impostazioni ti saranno inviati via email a %@.";
@@ -8399,7 +8399,7 @@
 "Your site has been succesfully restored" = "Il tuo sito è stato ripristinato con successo";
 
 /* No comment provided by engineer. */
-"Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader." = "Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader.";
+"Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader." = "L'icona del tuo sito viene utilizzata sul web: nelle schede del browser, nelle anteprime del sito sui social media e nel Reader di WordPress.com.";
 
 /* Title of a message displayed when user starts a restore operation */
 "Your site is being restored" = "Il tuo sito è in fase di ripristino";
